--- a/dataset-renderer/package.json
+++ b/dataset-renderer/package.json
@@ -4,7 +4,8 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "serve": "parcel build && http-server dist"
   },
   "devDependencies": {
     "parcel": "^2.6.2",
@@ -14,6 +15,7 @@
   "dependencies": {
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.9.0",
+    "http-server": "^14.1.1",
     "russian-words": "^1.0.1"
   },
   "staticFiles": {
